--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ __pycache__/*.pyc
 *.pyc
 *.pyo
 *.pickle
+tiktoka-studio-uploader-wanghaisheng-patch-4/*.json
+tiktoka-studio-uploader-wanghaisheng-patch-4/examples/*.json
