--- a/notes/requirements.txt
+++ b/notes/requirements.txt
@@ -56,7 +56,7 @@ pyasn1-modules==0.3.0
     # via google-auth
 pyparsing==3.1.0
     # via httplib2
-pytube==15.0.0
+pytubefix
     # via -r requirements.in
 requests==2.31.0
     # via
